make main structural styles

--- a/cv.html
+++ b/cv.html
@@ -2,11 +2,34 @@
 <html>
 
 <head>
-
+    <style>
+        .title-blue{
+            color: rgb(5, 112, 186);
+        }
+        .upper{
+            text-transform: uppercase;
+        }
+        .col-1{
+            width: 38%;
+            float: left;
+        }
+        .col-2{
+            width: 58%;
+            float: right;
+        }
+        .container{
+            font-family: Arial, Helvetica, sans-serif;
+            width: 60%;
+            margin: auto;
+            }
+        .non-decorated-list{
+            list-style: none;
+        }
+    </style>
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <div class="col-1">
             <div class="personal-info">
                 <div class="photo"></div>
@@ -31,7 +54,7 @@
                     <span class="title-circle"><span class="glyphicon"></span></span> contact
                     <span class="title-line contact-title-line"></span>
                 </h3>
-                <ul class="contact-list">
+                <ul class="non-decorated-list contact-list">
                     <li class="contact-list-item"><span class="upper title title-blue">address</span> Tomsk</li>
                     <li class="contact-list-item"><span class="upper title title-blue">e-mail</span></li>
                     <li class="contact-list-item"><span class="upper title title-blue">phone</span></li>
@@ -64,7 +87,7 @@
                     <span class="title-circle"><span class="glyphicon"></span></span> education
                     <span class="title-line education-title-line"></span>
                 </h3>
-                <ul class="education-list">
+                <ul class="non-decorated-list education-list">
                     <li class="education-list-item"><span class="upper title title-blue">address</span></li>
                     <li class="education-list-item"><span class="upper title title-blue">address</span></li>
                     <li class="education-list-item"><span class="upper title title-blue">address</span></li>
@@ -77,7 +100,7 @@
                     <span class="title-circle"><span class="glyphicon"></span></span> experience
                     <span class="title-line experience-title-line"></span>
                 </h3>
-                <ul class="experience-list">
+                <ul class="non-decorated-list experience-list">
                     <li class="experience-list-item"><span class="upper title title-black">address</span></li>
                     <li class="experience-list-item"><span class="upper title title-black">address</span></li>
                     <li class="experience-list-item"><span class="upper 
