--- a/cv.html
+++ b/cv.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="fa/css/font-awesome.min.css">
     <style>
         .title-blue{
             color: rgb(5, 112, 186);
@@ -25,6 +26,52 @@
         .non-decorated-list{
             list-style: none;
         }
+        .title-circle{
+            height: 30px;
+            width: 30px;
+            background: rgb(5, 112, 186);
+            border: 2px solid white;
+            box-shadow: 0 0 0 1px rgb(5, 112, 186);
+            border-radius: 50%;
+            display: inline-block;
+            text-align: center;
+        }
+        .personal-info{
+            text-align: center; 
+            margin-top: 50px;
+        }
+        .photo{
+            height: 90px;
+            width: 90px;
+        }
+        .fa{
+            color: white;
+            line-height: 30px;
+        }
+        .title-line{
+            height: 5px;
+            background: rgb(5, 112, 186);
+            display: inline-block;
+            margin-bottom: 5px;
+        }
+        .profile-line{
+            width: 187px;
+        }
+        .contact-title-line{
+            width: 178px;
+        }
+        .skills-title-line{
+            width: 201px;
+        }
+        .education-title-line{
+            width: 323px;
+        }
+        .experience-title-line{
+            width: 312px;
+        }
+        .software-title-line{
+            width: 327px;
+        }
     </style>
 </head>
 
@@ -32,15 +79,15 @@
     <div class="container">
         <div class="col-1">
             <div class="personal-info">
-                <div class="photo"></div>
+                <div class="title-circle photo"></div>
                 <h1 class="name">EKATERINA</h1>
                 <h1 class="surname">KONDARETKO</h1>
                 <h2 class="profession">FRONTEND</h2>
             </div>
             <div class="profile">
                 <h3 class="upper title title-blue">
-                    <span class="title-circle"><span class="glyphicon"></span></span> profile
-                    <span class="profile-line"></span>
+                    <span class="title-circle"><span class="fa fa-user"></span></span> profile
+                    <span class="title-line profile-line"></span>
                 </h3>
                 <p class="profile-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -51,7 +98,7 @@
             </div>
             <div class="contact">
                 <h3 class="upper title title-blue">
-                    <span class="title-circle"><span class="glyphicon"></span></span> contact
+                    <span class="title-circle"><span class="fa fa-phone"></span></span> contact
                     <span class="title-line contact-title-line"></span>
                 </h3>
                 <ul class="non-decorated-list contact-list">
@@ -64,7 +111,7 @@
             </div>
             <div class="skills">
                 <h3 class="upper title title-blue">
-                    <span class="title-circle"><span class="glyphicon"></span></span> skills
+                    <span class="title-circle"><span class="fa fa-lightbulb-o"></span></span> skills
                     <span class="title-line skills-title-line"></span>
                 </h3>
                 <span class="upper skill-title">creative</span>
@@ -84,7 +131,7 @@
         <div class="col-2">
             <div class="education">
                 <h3 class="upper title title-blue">
-                    <span class="title-circle"><span class="glyphicon"></span></span> education
+                    <span class="title-circle"><span class="fa fa-star"></span></span> education
                     <span class="title-line education-title-line"></span>
                 </h3>
                 <ul class="non-decorated-list education-list">
@@ -97,7 +144,7 @@
             </div>
             <div class="experience">
                 <h3 class="upper title title-blue">
-                    <span class="title-circle"><span class="glyphicon"></span></span> experience
+                    <span class="title-circle"><span class="fa fa-suitcase"></span></span> experience
                     <span class="title-line experience-title-line"></span>
                 </h3>
                 <ul class="non-decorated-list experience-list">
@@ -109,7 +156,7 @@
             </div>
             <div class="software">
                 <h3 class="upper title title-blue">
-                    <span class="title-circle"><span class="glyphicon"></span></span> software
+                    <span class="title-circle"><span class="fa fa-laptop"></span></span> software
                     <span class="title-line software-title-line"></span>
                 </h3>
                 
