remove unused classes

--- a/cv.html
+++ b/cv.html
@@ -60,10 +60,6 @@
             background: rgb(61, 108, 176) !important;
         }
 
-
-
-
-
         .title-line {
             height: 5px;
             width: 100%;
@@ -92,9 +88,6 @@
             display: inline-block;
             text-align: center;
         }
-
-
-
 
         .personal-info {
             text-align: center;
@@ -129,20 +122,16 @@
             font-size: 26px;
         }
 
-
-
-
-
         .contact .width-block {
             display: inline-block;
             width: 80px;
         }
 
-        .skills .skill-title {
+        .skill-title {
             line-height: 20px;
         }
 
-        .skills .skill-range-item {
+        .skill-range-item {
             display: inline-block;
             height: 12px;
             width: 12px;
@@ -150,7 +139,7 @@
             border-radius: 50%;
         }
 
-        .skills .skill-range-item:not(:last-child) {
+        .skill-range-item:not(:last-child) {
             margin-right: 3px;
         }
 
@@ -164,18 +153,18 @@
         }
 
 
-        .software .software-skill-range .software-skill-range-line, 
-        .software .software-skill-range .software-skill-range-blue-line {
+        .software-skill-range-line, 
+        .software-skill-range-blue-line {
             height: 15px;
             display: inline-block;
         }
 
-        .software .software-skill-range .software-skill-range-line{
+        .software-skill-range-line{
             width: 170px;
             background: rgb(231, 231, 231);
         }
 
-        .software .software-skill-range .software-skill-range-blue-line{
+        .software-skill-range-blue-line{
             background: rgb(61, 108, 176);
         }
 
